# attitude_lib

./: .gitignore  CMakeLists.txt  README.md  attitude.h  main.cpp  mat3.h  quaternion.h  vec3.h
example/: attitude.h  main.cpp
inc/: MEKF.h  explicit_complementary_filter.h  madgwick.h  mat3.h  quaternion.h  vec3.h
